--- a/index.html
+++ b/index.html
@@ -3,43 +3,99 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Contact Me</title>
+  <title>Monkey Spring</title>
+
 </head>
 
 <body style="background-color:#FEC260;">
-  <table cellspacing="40">
+
+  <table cellspacing="20">
     <tr>
-<td>
+      <td> <style text="white"><a>
 
-  <img height="350" src="https://ik.imagekit.io/bayc/assets/pets-welcome.png"
-  alt="Bored">
-  <h1>Contact Me For More Details</h1>
-  <h4><strong>Address</strong></h4>
-  <p>2 West view Capmps Bay Avenue</p>
-  <h4><strong>Phone Number</strong></h4>
-  <p><a href="tel:310-420-8674">310-420-8674</a></p>
-  <h4><strong>Email Address</strong></h4>
-  <p><a href="mailto:info@boredapeyachtclub.com">info@boredapeyachtclub.com</a></p>
-</td>
+      <a href="hobbies.html">My Hobbies</a>
+        <br /><a href="contact.html">Contact Me</a>
+        <br /><a href="invoice.html">Invoice</a></style>  <img height="350" src="images/4580.jpg" alt="Bored Ape"></a></td>
+      <td>
+        <h1>Spark Chu</h1>
+        <p><em>Founder and CTO of <strong><a href="https://boredapeyachtclub.com/">Monkey Spring</a></strong>.</em></p>
+        <p>I am a Genetics Engineer working on making weed from tin air</p>
+      </td>
+    </tr>
+
+  </table>
 
 
-        <td>
+  <hr>
+  <h3><strong>Books and Teaching</strong></h3>
+  <ul>
+    <li><em>The complete guide to rolling</em> <strong><a href="https://boredapeyachtclub.com/">Cannabis</a></strong></li>
+    <li><em>How to roll</em> <strong><a href="https://boredapeyachtclub.com/#/home#team">Backwood</a></strong></li>
+    <li><em>Burn D</em> <strong><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/learn/lecture/12287450#questions">Ganger</a></strong></li>
+  </ul>
 
-        <form  action="mailto:favour4evergreen@gmail.com" enctype="text/plain" method="post">
-          <label>Your Name</label>
-          <input type="text" name="yourName" value=""><br>
-          <label>Your Email</label>
-          <input type="email" name="yourEmail" value=""><br>
-          <label>Your Message</label>
-          <textarea name="message" rows="10" cols="30"></textarea><br>
-          <input type="submit" name=""><br>
-
-        </form>
-        </td>
+  <h3>New NFT Release Details</h3>
+  <table>
+    <thead>
+      <td>Date</td>
+      <td>Description</td>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2022</td>
+        <td>Rasta Bored Ape</td>
       </tr>
+      <tr>
+        <td>2023</td>
+        <td>Real Man Ape</td>
+      </tr>
+    </tbody>
+  </table>
+  <table>
+  <tr>
+  <td><table>
 
-</table>
-<hr size="4" noshade>
+
+  <h3>Traits </h3>
+  <tr>
+    <td>Western </td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>African</td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>Asian</td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+
+</table></td>
+  <td><table>
+
+
+  <h3>Traits </h3>
+  <tr>
+    <td>Western </td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>African</td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+  <tr>
+    <td>Asian</td>
+    <td>⭐⭐⭐⭐⭐</td>
+  </tr>
+
+</table></td>
+  </tr>
+
+  </table>
+
+  <hr size="4" noshade>
+
+
 </body>
 
 </html>
