--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <title>Contact Me</title>
 </head>
 
-<body>
+<body style="background-color:#FEC260;">
   <table cellspacing="40">
     <tr>
 <td>
