--- a/index.html
+++ b/index.html
@@ -4,18 +4,33 @@
 <head>
   <meta charset="utf-8">
   <title>Monkey Spring</title>
+  <style media="screen">
+    body {background-color:#FEC260;}
+    hr {background-color:#FEC260;
+      width:10px:;
+      border-style:dotted none none;
+      border-width:5px;
+    }
+    a:link{color: green;
+    font-size: 20px;
+  font-style: normal;
+  padding-right: 15px;
+}
+
+
+  </style>
 
 </head>
 
-<body style="background-color:#FEC260;">
+<body">
 
   <table cellspacing="20">
     <tr>
-      <td> <style text="white"><a>
+      <td> <a>
 
-      <a href="hobbies.html">My Hobbies</a>
-        <br /><a href="contact.html">Contact Me</a>
-        <br /><a href="invoice.html">Invoice</a></style>  <img height="150" src="images/4580.jpg" alt="Bored Ape"></a></td>
+      </style><strong><a href="hobbies.html">My Hobbies   </a>
+        <a href="contact.html">Contact Me  </a>
+        <a href="invoice.html">Invoice</a>  </strong><img height="350" src="images/4580.jpg" alt="Bored Ape"></a></td>
       <td>
         <h1>Spark Chu</h1>
         <p><em>Founder and CTO of <strong><a href="https://boredapeyachtclub.com/">Monkey Spring</a></strong>.</em></p>
