--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     a:link{color: green;
     font-size: 20px;
   font-style: normal;
-  padding-right: 15px;
+  padding-right: 15px;}
 }
 
 
@@ -30,7 +30,7 @@
 
       </style><strong><a href="hobbies.html">My Hobbies   </a>
         <a href="contact.html">Contact Me  </a>
-        <a href="invoice.html">Invoice</a>  </strong><img height="350" src="images/4580.jpg" alt="Bored Ape"></a></td>
+        <a href="invoice.html">Invoice</a></br>  </strong><img height="350" src="images/4580.jpg" alt="Bored Ape"></a></td>
       <td>
         <h1>Spark Chu</h1>
         <p><em>Founder and CTO of <strong><a href="https://boredapeyachtclub.com/">Monkey Spring</a></strong>.</em></p>
